--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Prefetch)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_compile_options(-msse)
-add_executable(Prefetch main.cpp hashmap.cpp coroutine.hpp)
 
+add_compile_options(-msse)
+
+add_subdirectory(third_party)
+add_subdirectory(src)
