--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/benchmark)
 add_executable(hashmap_benchmark hashmap_benchmark.cpp)
 
 target_link_libraries(hashmap_benchmark hashmap benchmark::benchmark)
+
+add_executable(prefetch_latency prefetch_latency.cpp)
