some prefetch latencies visualization

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(hashmap_benchmark hashmap_benchmark.cpp)
 target_link_libraries(hashmap_benchmark hashmap benchmark::benchmark)
 
 add_executable(prefetch_latency prefetch_latency.cpp)
+
+target_link_libraries(prefetch_latency nlohmann_json::nlohmann_json)
