pseudo benchmark for random access

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -11,3 +11,8 @@ target_link_libraries(hashmap_benchmark hashmap benchmark::benchmark)
 add_executable(prefetch_latency prefetch_latency.cpp)
 
 target_link_libraries(prefetch_latency nlohmann_json::nlohmann_json)
+
+add_executable(random_read_benchmark random_read_benchmark.cpp)
+
+target_link_libraries(random_read_benchmark random_access)
+
