add numa manager and prefetching singleton

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,11 +1,13 @@
+add_subdirectory(utils)
+add_subdirectory(numa)
+
 include_directories(utils)
 
-add_library(utils utils/profiler.cpp utils/numa_memory_resource.cpp)
-target_include_directories(utils SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/../../third_party/jemalloc/include)
-target_link_libraries(utils nlohmann_json::nlohmann_json numa custom_jemalloc)
+add_library(prefetching prefetching.cpp)
+target_link_libraries(prefetching PUBLIC utils prefetching_numa)
 
 add_library(hashmap hashmap.cpp)
 target_include_directories(hashmap SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/../../third_party/jemalloc/include)
-target_link_libraries(hashmap PRIVATE utils)
+target_link_libraries(hashmap PRIVATE prefetching)
 add_library(random_access random_access.cpp)
-target_link_libraries(random_access PRIVATE utils)
+target_link_libraries(random_access PRIVATE prefetching)
