add cxxopts and cmake cleanup

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/benchmark)
 
 add_executable(hashmap_benchmark hashmap_benchmark.cpp)
 
-target_link_libraries(hashmap_benchmark hashmap benchmark::benchmark nlohmann_json::nlohmann_json)
+target_link_libraries(hashmap_benchmark hashmap prefetching)
 
 add_executable(prefetch_latency prefetch_latency.cpp)
 
