add parameters to benchmark

--- a/src/lib/utils/CMakeLists.txt
+++ b/src/lib/utils/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(utils profiler.cpp)
-target_link_libraries(utils nlohmann_json::nlohmann_json)
+add_library(utils profiler.cpp runtime_config.cpp)
+target_link_libraries(utils nlohmann_json::nlohmann_json cxxopts)
