simple interleaving bench

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -19,3 +19,7 @@ target_link_libraries(random_read_benchmark random_access)
 add_executable(tree_simulation tree_simulation_benchmark.cpp)
 
 target_link_libraries(tree_simulation prefetching)
+
+add_executable(lfb_size lfb_size_benchmark.cpp)
+
+target_link_libraries(lfb_size prefetching)
